--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
-
+  <script src="%PUBLIC_URL%/bootstrap.min.js"></script>
   <title>Kenya Facility List</title>
-  <!--This is the title of all the pages-->
 
 </head>
 
