--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <Script src="Chart.js"></Script>
+        
         <body>
-            <h1 style="text-align:center"><b><u>Organisation Units</u></b></h1>
+                <div style="display: flex; box-sizing: border-box; background: rgb(39, 102, 150); position: fixed;
+                 top: 0px; left: 0px; width: 100%; min-height: 48px; justify-content: center; align-items: center; z-index: 1400;">
+                <h1 style="text-align:center"><b><u>Conflict Percentage</u></b></h1>
+            </div>
             <div class="container">
                         <button type="button" class="btn">Kenya</button>
                         <div class="dropdown">
