--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,21 @@
         mapTypeId: 'roadmap'
       };
       map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
-      var markers = [
-        ['London Eye, London', -1.28333, 36.91667],
-        ['Palace of Westminster, London', -1.38333, 36.81667],
-        ['Duke of Nyanya HQ', -1.28333, 36.81667]
-      ];
+
+      console.log("attempting to fetch local geo codes")
+      var geos = JSON.parse(localStorage.getItem("mfl_geocodes"))
+      console.log(geos)
+      var markers = [];
+      if (geos != "") {
+        markers = geos;
+      } else {
+        console.log("No goes found using default..");
+        markers = [
+          ['London Eye, London', -1.28333, 36.91667],
+          ['Palace of Westminster, London', -1.38333, 36.81667],
+          ['Duke of Nyanya HQ', -1.28333, 36.81667]
+        ];
+      }
       var infoWindow = new google.maps.InfoWindow(), marker, i;
       for (i = 0; i < markers.length; i++) {
         var position = new google.maps.LatLng(markers[i][1], markers[i][2]);
