--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="%PUBLIC_URL%/js/jquery.js"></script>
   <script src="%PUBLIC_URL%/js/bootstrap.js"></script>
   <script src="%PUBLIC_URL%/js/popper.js"></script>
